--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,9 +6,9 @@ html {
   scroll-behavior: smooth;
 }
 
-/* .bg-hero {
+.bg-hero {
   background: linear-gradient(to bottom, #FFF0F4 100%, #FFFFFF 100%, #FFF0F4 100%);
 }
 .font-thiin {
   font-weight: 500;
-} */
+}
